Small bugfixes * Fixed alignment of game's timeline * Corrected some spelling on the main page

--- a/src/_styles/_game-container.scss
+++ b/src/_styles/_game-container.scss
@@ -13,10 +13,10 @@ $metal: linear-gradient(to bottom, $metal-0 0%, $metal-1 21%, $metal-2 49%, $met
 
 // game styles
 .game-container {
-  color: $container-text;
   background: $metal-0;
   border-radius: .5rem;
   box-shadow: 0 0 1.2em .4em $blue-glow;
+  color: $container-text;
   // left: 50%;
   // margin-right: -50%;
   pointer-events: none;
@@ -212,7 +212,7 @@ $metal: linear-gradient(to bottom, $metal-0 0%, $metal-1 21%, $metal-2 49%, $met
 
 $progress: #eee;
 
-.timeline > .progress {
+.timeline > .game-progress {
   background: $progress;
   z-index: 5;
 }
